--- a/rastreamento/css/style.css
+++ b/rastreamento/css/style.css
@@ -1,7 +1,10 @@
-body { 
-    background-color: white;
-    font-family: Arial, sans-serif; 
-}
+
+ html, body {
+      height: 100%;
+      margin: 0;
+      display: flex;
+      flex-direction: column;
+    }
 
 header {
     background-color: #8b30a6;
@@ -12,24 +15,93 @@ header {
     
 }
 
+main {
+    flex: 1;
+}
+
 label {
+    font-size: 1.5em;
     text-align: right;
     margin-left: 5px;
     
 }
 
-input, button { 
-    padding: 8px; margin-top: 10px; 
+input { 
+    padding: 8px; 
+    margin-top: 10px;
+    border-radius: 15px;
+    border-color: #a7a7a7;
+    border-width: 1px;
+}
+
+button {
+    background-color: #8b30a6;
+    color: white;
+    padding: 8px; 
+    margin-top: 10px;
+    border-radius: 15px;
+    border-color: #a7a7a7;
+    border-width: 1px;
+}
+
+button:hover {
+    background-color: white;
+    color: #8b30a6;
+    border-color: #8b30a6;
 }
 
 #resultado {
-    background-color: brown;
+    padding: 8px;
+    margin-top: 10px;
 }
 
 #rastreio{ 
     margin-top: 20px; padding: 10px; border: 1px solid #ccc; 
+    border-radius: 15px;
+}
+
+.jet {
+    text-decoration: none;
+    color: red;
 }
 
 iframe { 
     width: 100%; height: 400px; border: none; 
+}
+
+footer {
+    background-color: black;
+    font-family: sans-serif;
+    padding: 40px 0px;
+    text-align: center;
+}
+
+footer table {
+    color: white;
+    width: 80%;
+    margin: 0 auto;
+    border-collapse: collapse;
+}
+
+footer td {
+    padding: 10px;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+footer td.links {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+}
+
+footer td a {
+    color: white;
+    text-decoration: none;
+}
+
+footer td a:hover {
+    color: black;
 }
