--- a/rastreamento/css/style.css
+++ b/rastreamento/css/style.css
@@ -17,7 +17,18 @@ header {
 }
 
 main {
-    flex: 1;
+    display: flex;
+    align-items: center;      /* Centraliza verticalmente */
+    justify-content: center;  /*Centraliza horizontalmente */
+     height: 80vh;   
+}
+
+.centro {
+    text-align: center;
+    background: #f9f9f9;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 0 30px rgba(0, 0, 0, 0.1);
 }
 
 label {
@@ -59,6 +70,10 @@ button:hover {
 #rastreio{ 
     margin-top: 20px; padding: 10px; border: 1px solid #ccc; 
     border-radius: 15px;
+    margin-top: 20px;
+    text-align: center;
+    padding: 10px;
+    font-size: 16px;
 }
 
 .jet {
@@ -70,39 +85,50 @@ iframe {
     width: 100%; height: 400px; border: none; 
 }
 
-footer {
-    background-color: black;
-    font-family: sans-serif;
-    padding: 20px 0px;
+.rodape {
+    background: #000;
+    color: #fff;
     text-align: center;
+    padding: 30px 20px;
+    font-family: Arial, sans-serif;
 }
 
-footer table {
-    color: white;
-    width: 80%;
-    margin: 0 auto;
-    border-collapse: collapse;
-}
-
-footer td {
-    padding: 10px;
-    text-align: center;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-footer td.links {
-    display: flex;
-    justify-content: center;
-    gap: 20px;
-}
-
-footer td a {
-    color: white;
+.rodape a {
+    color: #fff;
+    margin: 0 10px;
     text-decoration: none;
+    font-size: 14px;
 }
 
-footer td a:hover {
-    color: black;
+.rodape a:hover {
+     text-decoration: underline;
+}
+
+.social img {
+     margin-bottom: 15px;
+}
+
+.menu-footer {
+    margin: 20px 0;
+}
+
+.contato p {
+    margin: 5px 0;
+    font-size: 14px;
+}
+
+.contato img {
+    margin: 5px 0;
+    font-size: 14px;
+}
+
+.info-final {
+    margin-top: 30px;
+    font-size: 12px;
+}
+
+.info-final img {
+    display: flex;
+    vertical-align: middle;
+    margin: 0 5px;
 }
