--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,6 +7,7 @@ html, body {
 }
 
 header {
+    font-weight: bold;
     background-color: #8b30a6;
     color: white;
     text-align: center;
@@ -15,19 +16,21 @@ header {
 }
 
 main {
+    margin-top: 20px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
     padding: 15px;
     flex-grow: 1;
+    font-weight: bold;
 }
 
 .centro {
     width: 100%;
     max-width: 400px;
     text-align: center;
-    background: #faf2fd;
+    background: #ffffff;
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
@@ -71,12 +74,14 @@ button:hover {
 }
 
 #rastreio {
-    margin-top: 20px;
     padding: 10px;
-    border: 1px solid #ccc;
     border-radius: 15px;
     text-align: center;
     font-size: 1em;
+}
+
+#textoRastreamento {
+    color: red;
 }
 
 iframe {
