--- a/public/css/style.css
+++ b/public/css/style.css
@@ -63,6 +63,21 @@ main {
   background-color: #6e2185;
 }
 
+.spinner {
+  width: 28px;
+  height: 28px;
+  border: 4px solid #ccc;
+  border-top: 4px solid #8b30a6;
+  border-radius: 50%;
+  animation: girar 1s linear infinite;
+  margin: 10px auto;
+}
+
+@keyframes girar {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
 /* Quantidade de pedidos */
 #resultado {
   padding: 8px;
